--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
 <ul>
   <li> <a href="https://space.bilibili.com/1363449187?spm_id_from=333.1365.0.0">bilibili</a> </li>
   <li> <a href="https://yelanyujun.lofter.com/">lofter</a> </li>
+  <li> <a href="https://www.xiaohongshu.com/user/profile/66ee7da0000000001e002f39">小红书</a> </li>
 </ul>
