--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <p>Hello 大家好</p>
 <p>我是夜兰瑜君，这是我的个人网站。 </p>
+<p>introduction </p>
+<p>❤生态保护/心理学/地信/MBTI/九型❤</p>
+<p>❤ISTJ 5w6 583 FEVL❤</p>
+<p>❤matlab、python、HTML在学❤</p>
+<p>❤web开发+gis算法+游戏逆向和开发❤</p>
+<P>❤马克思女性主义❤</P>
+<P>❤喜欢吃热狗❤</P>
+<P>❤食物语玩家❤</P>
 <p>本网站用于储存我觉得有趣有用的东西。</p>
 <p>个人获取电子书的网站</p>
 <p>zlibrary </p>  
